--- a/frontend/src/assets/css/newStudent.css
+++ b/frontend/src/assets/css/newStudent.css
@@ -65,9 +65,7 @@ select.form-control {
     background-color: #0056b3;
 }
 
-input {
-    color: white;
-}
+
 
 .add-student-form {
     max-width: 400px;
@@ -105,9 +103,9 @@ input {
     background-color: #0056b3;
 }
 
-.add-student-form {
+/* .add-student-form {
     /* Your form styles here */
-}
+ */
 
 .form-group {
     margin-bottom: 20px;
